--- a/map/res/menu/main.xml
+++ b/map/res/menu/main.xml
@@ -35,5 +35,10 @@
         android:showAsAction="never"
         android:title="@string/compass"/>
     
+    <item
+        android:id="@+id/addOverlay"
+        android:showAsAction="never"
+        android:title="@string/addOverlay"/>
+    
 	
 </menu>
